# cpp_consoler

./: CMakeLists.txt
src/: consoler.cpp  consoler.h  types.h
tests/: tests.cpp
